.k8s/gateway-api/gateway-api.service.yml
apiVersion: v1
kind: Service
metadata:
  name: gateway-api-service
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
  selector:
    app: gateway-api
