.k8s/gateway-api/gateway-api.destination.yml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: gateway-api-destination
spec:
  host: gateway-api-service
  trafficPolicy:
    outlierDetection:
      consecutive5xxErrors: 5 
      interval: 10s
      baseEjectionTime: 30s
      maxEjectionPercent: 80
